# Bot_V6

./: .editorconfig  .gitignore  .gitlint  .markdownlint.jsonc  .pre-commit-config.yaml  .pylintrc  .sqlfluff  ARCHIVED_CONCEPTS.md  AUTONOMOUS_SYSTEM_EXECUTIVE_SUMMARY.md  AUTONOMOUS_SYSTEM_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_READINESS.md  Dockerfile  Dockerfile.jupyter  Dockerfile.prod  Enhanced_PRD_Prompt.md  FINAL_SUBMISSION_ONLINE_ADAPTATION.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MINIMUM_VIABLE_SLICE.md  ONLINE_ADAPTATION_EVALUATION_PLAN.md  PRD.md  PRD_TASK_BREAKDOWN.md  PROJECT_COMPONENTS_SUMMARY.md  PROJECT_MIGRATION_PLAN.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_REVIEW_AND_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ORGANIZED.md  Plan.md  Qwen3_Coder_Deliverables.md  README.md  RooCode-Sonic_Deliverables.md  SESSION_SUMMARY.md  START_TICKDATA_DOWNLOAD.sh  STRATEGY_MODEL_INTEGRATION.md  TASK_002_VALIDATION_REPORT.md  (+46 more)
.crush/: crush.db-shm  crush.db-wal
.github/workflows/: deploy-docs.yml
Documentation/: README.md
Documentation/01_Project_Overview/: README.md
Documentation/02_Requirements/: functional_requirements.md  non_functional_requirements.md
Documentation/03_Architecture_Design/: system_architecture.md
Documentation/04_Database_Schema/: database_design.md
Documentation/05_API_Documentation/: api_reference.md  tick_data_api.md
Documentation/06_Development_Guides/: autonomous_brain_memory_prompt.md  setup_guide.md
Documentation/07_Testing/: testing_strategy.md
Documentation/08_Deployment/: deployment_guide.md
Documentation/09_Maintenance/: system_maintenance.md
Documentation/10_Standards_and_Best_Practices/: coding_standards.md
Documentation/CryptoScalp_AI/: COMPREHENSIVE_IMPLEMENTATION_ANALYSIS.md  DETAILED_ANALYSIS_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md
Documentation/PROJECT_STRUCTURE/: STRUCTURE.md
Documentation/archive/: AUTONOMOUS_INFRASTRUCTURE_PLAN.md  ENHANCED_ARCHITECTURE_V2.md  README.md.old
Documentation/explanation/: README.md  index.md
Documentation/how_to_guides/: README.md  development_environment_setup.md  index.md
Documentation/reference/: README.md  index.md
Documentation/tutorials/: README.md  getting_started.md  index.md
Gemini/: Gemini-Task Assignment #002.md
Human_Brain_Memory_Stack/: Qwen__20250905_mlbqeqkux.txt  Qwen_bash_20250905_16inqruio.sh  Qwen_bash_20250905_32u81e1d4.sh  Qwen_bash_20250905_z0ojzeytw.sh  Qwen_markdown_20250905_1zf48ym8j.md  Qwen_python_20250905_0y9y4fagn.py  Qwen_python_20250905_1ja84dp3f.py  Qwen_python_20250905_2v2wkjpgs.py  Qwen_python_20250905_elvzhj1mq.py  Qwen_python_20250905_jgt6mn3e7.py  Qwen_python_20250905_wd0f1phb6.py  table-62ccaa87-2766-4c93-a802-6ed989767a6d-18.csv  table-62ccaa87-2766-4c93-a802-6ed989767a6d-20.csv  table-62ccaa87-2766-4c93-a802-6ed989767a6d-32.csv
Junk/: README.md  mcp.json.backup
Qwen3/: Qwen3-Task Assignment #002
Qwen32b/: Qwen32B-Task Assignment #002.md
RooCode/: RooCode-Sonic (Grok) - Task Assignment #002
architecture/: api_interfaces.md  component_specs.md  database_schema.md  system_design.md  technology_stack.md
backend/src/: main.py
backend/tests/: conftest.py
code_samples/: architecture_demo.py  interface_definitions.py
config/: redis.conf  sla_thresholds.json  tickdata_download_config.json
demo/: enhanced_performance_demo.py  enhanced_system_demo.py
docs/: TICKDATA_DOWNLOAD_README.md  api.md  approval_workflow.md  byterover-handbook.md  enhanced_system_summary.md  final_validation_report.md  kafka_integration.md  memory_policy.md  version_control.json
executive_summary/: market_analysis.md  product_vision.md  success_metrics.md  technical_overview.md
init-scripts/: init.sql
migrations/: postgres_pgvector_init.sql  postgres_pgvector_init_10d.sql
monitoring/: prometheus.yml
reports/: PRD_TASK_BREAKDOWN_FULL.md  enhanced_performance_demo.py_analysis.md
scripts/: __init__.py  deploy_production.sh  dlq_inspector.py  dlq_replay.py  download_historical_tickdata.py  get_started_tickdata.py  health_check.sh  kafka_check.py  kafka_e2e_smoke.py  kafka_smoke_all.py  kafka_topics.py  launch_tickdata_download.py  launch_tickdata_download.sh  run_benchmarks.sh  run_kafka_consumer.py  run_kafka_producer.py  train_regime_detector.py  validate_kafka_smoke.py  validate_performance.py  validate_tickdata.py
specs/001-feature-flags-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/feature-kafka-streaming/: spec.md
src/: __init__.py  config.py  main.py
src/agents/: drl_agent.py
src/api/: data_pipeline.py  dependencies.py  models.py  tick_data_service.py
src/config/: __init__.py  kafka_config.py  tick_data_config.py  trading_config.py
src/core/: adaptive_regime_integration.py  autonomous_neural_network.py
src/data_pipeline/: __init__.py  binance_data_manager.py  data_loader.py  data_validator.py  enhanced_websocket_manager.py  kafka_consumer_service.py  kafka_io.py  websocket_feed.py
src/database/: dependencies.py  embedding_dao.py  enhanced_pool_manager.py  manager.py  models.py  redis_manager.py
src/learning/: adaptive_risk_management.py  continuous_learning_pipeline.py  dynamic_leveraging_system.py  dynamic_strategy_switching.py  experience_replay_memory.py  knowledge_distillation.py  learning_manager.py  market_regime_detection.py  nn_policy_adapter.py  online_adaptation_integration.py  online_model_adaptation.py  performance_based_risk_adjustment.py  platform_compatibility.py  position_sizer.py  real_ml_models.py  risk_monitoring_alerting.py  (+5 more)
tests/: Research_paper_add.txt  autonomous_system_tests.py  conftest.py  test_enhanced_architecture.py  test_enhanced_architecture_simple.py  test_enhanced_system_validation.py  test_implementation_basic.py  test_minimal.py  test_xgboost_components.py
user_input_files/: Orchestrator.txt
version_control/: approval_workflow.md  changelog_template.md  schema.md  validation_report.md
(+105 files in other folders)
